# Echo-G-Community-Edition

./: .gitignore  LICENSE  README.md  compare_semantics.py  echo_g_core.py  evaluate_pipeline.py  ontology_to_markdown.py  pdf_to_markdown.py  pdf_to_ontology.py  pyproject.toml  setup_geomind_one.md
ontology/: echo-core.ttl
